BPER/DEVF/force-app/main/default/objects/UploadFilePermission__mdt/UploadFilePermission__mdt.object-meta.xml
<CustomObject>
    <label>Permesso Allegati</label>
    <pluralLabel>Permessi Allegati</pluralLabel>
</CustomObject>