BPER/DEVF/force-app/main/default/objects/UploadFilePermission__mdt/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campagna</label>
    <type>Checkbox</type>
</CustomField>