BPER/DEVF/force-app/main/default/objects/UploadFilePermission__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attivo</label>
    <type>Checkbox</type>
</CustomField>